# gomi-prototype

./: .gitignore  README.md  gomi.py  main.py  pyproject.toml  test.py
datasets/: openreview_labeled_2k.csv  openreview_labeled_5k_auto.csv  qt_test_raw.pkl
scripts/: adapt_vocab.py  label_5k.py  pretrain_mlm.py  train_sentiment.py
scripts/datasets/: risk_model.joblib
