[project]
name = "gomi-prototype"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "lizard>=1.22.1",
    "llvmlite>=0.39.0",
    "numpy>=2.4.5",
    "scikit-learn>=1.8.0",
    "shap>=0.44.0",
    "torch>=2.12.0",
    "transformers>=5.8.1",
]
